# simple-get-opt

./: CHANGES  LICENSE  simple-get-opt.cabal
src/: SimpleGetOpt.hs
test/: example.hs
