name:                simple-get-opt
version:             0.1.0.0
synopsis:            A simple library for processing command-line options.
license:             BSD3
license-file:        LICENSE
author:              Iavor S. Diatchki
maintainer:          iavor.diatchki@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SimpleGetOpt
  build-depends:       base
  default-language:    Haskell2010
